--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 SSH-basics.md
 NIfTI-Guide.md
-images/NIfTI-Guide/nifti.drawio
-Notebook-Colab-Guide.md
+images/NIfTI-Guide/
+images/SSH-Guide
 bin
